--- a/app/views/matches/_table.html.erb
+++ b/app/views/matches/_table.html.erb
@@ -1,86 +1,74 @@
-<% if matches&.any? %>
-  <div class="row">
-    <div class="col">
-      <%= render 'shared/js_filter', target_table_body: js_filter_target, placeholder: 'meno hráča' %>
-    </div>
+<div class="row">
+  <div class="col">
+    <%= render 'shared/js_filter', target_table_body: js_filter_target, placeholder: 'meno hráča' %>
   </div>
-  <% if last_update_time.present? %>
-    <i><small>(aktualizácia: <%= I18n.localize(last_update_time, format: :date_with_time) %>)</small></i>
-  <% end %>
-  <div class="table-responsive my-1">
-    <table class="table table-sm table-borderless">
-      <thead class="thead-dark">
-        <tr>
-          <th class="phone-nr-width" scope="col">Hráč 1 - kurt</th>
-          <th class="phone-nr-width" scope="col">Hráč 2 - lopty</th>
-          <th scope="col">Informácie</th>
-          <th scope="col"></th>
-          <th></th>
-        </tr>
-      </thead>
-      <tbody class="<%= js_filter_target %>">
-
-        <% planned_matches = matches.select { |m| !m.play_date.blank? && m.finished_at.blank? } %>
-        <% if planned_matches.any? %>
-          <tr class="text-center">
-            <td colspan="5">Naplánované zápasy</td>
-          </tr>
-          <% @separator = nil %>
-          <% planned_matches.each do |match| %>
-
-            <% @separator = !@play_date.nil? && (match.play_date != @play_date) %>
-            <% @play_date = match.play_date %>
-
-            <%= render partial: 'matches/table_row', locals: { match: match, color_class: "table-bg-smoke" } %>
-          <% end %>
-          <% @separator = nil %>
-        <% end %>
-
-        <% recent_matches = matches.select { |m| !m.finished_at.blank? && m.finished_at > MatchesHelper::RECENT } %>
-        <% if recent_matches.any? %>
-          <tr class="text-center border-top-thick">
-            <td colspan="5">Posledné odohraté zápasy</td>
-          </tr>
-          <% recent_matches.each do |match| %>
-            <%= render partial: 'matches/table_row', locals: { match: match, color_class: "table-bg-yellow" } %>
-          <% end %>
-        <% end %>
-
-        <% previous_matches = matches.select { |m| !m.finished_at.blank? && m.finished_at <= MatchesHelper::RECENT } %>
-        <% if previous_matches.any? %>
-          <tr class="text-center border-top-thick">
-            <td colspan="5">Odohraté predtým</td>
-          </tr>
-          <% previous_matches.each do |match| %>
-            <%= render partial: 'matches/table_row', locals: { match: match, color_class: "table-bg-green" } %>
-          <% end %>
-        <% end %>
-
-        <% unplanned_matches = matches.select { |m| m.finished_at.blank? && m.play_date.blank? } %>
-        <% if unplanned_matches.any? %>
-          <tr class="text-center border-top-thick">
-            <td colspan="5">Čakajúce na termín</td>
-          </tr>
-          <% unplanned_matches.each do |match| %>
-            <%= render partial: 'matches/table_row', locals: { match: match, color_class: "" } %>
-          <% end %>
-        <% end %>
-      </tbody>
-    </table>
-  </div>
-  <p class="text-center">
-    <i>
-      <small>
-        <span class="table-bg-green text-nowrap px-2 py-1">odohratý zápas</span>
-        <span class="table-bg-yellow text-nowrap px-2 py-1">odohratý dnes, alebo včera</span>
-        <span class="table-bg-smoke text-nowrap px-2 py-1">naplánovaný zápas</span>
-      </small>
-    </i>
-  </p>
-<% else %>
-  <div class="row">
-    <div class="col">
-      <p class="lead text-center">Žiadne zápasy.</p>
-    </div>
-  </div>
+</div>
+<% if last_update_time.present? %>
+  <i><small>(aktualizácia: <%= I18n.localize(last_update_time, format: :date_with_time) %>)</small></i>
 <% end %>
+<div class="table-responsive my-1">
+  <table class="table table-sm table-borderless">
+    <thead class="thead-dark">
+    <tr>
+      <th class="phone-nr-width" scope="col">Hráč 1 - kurt</th>
+      <th class="phone-nr-width" scope="col">Hráč 2 - lopty</th>
+      <th scope="col">Informácie</th>
+      <th scope="col"></th>
+      <th></th>
+    </tr>
+    </thead>
+    <tbody class="<%= js_filter_target %>">
+
+    <% if planned_matches&.any? %>
+      <tr class="text-center">
+        <td colspan="5">Naplánované zápasy</td>
+      </tr>
+      <% @separator = nil %>
+      <% planned_matches.each do |match| %>
+
+        <% @separator = !@play_date.nil? && (match.play_date != @play_date) %>
+        <% @play_date = match.play_date %>
+
+        <%= render partial: 'matches/table_row', locals: { match: match, color_class: "table-bg-smoke" } %>
+      <% end %>
+      <% @separator = nil %>
+    <% end %>
+
+    <% if recent_matches&.any? %>
+      <tr class="text-center border-top-thick">
+        <td colspan="5">Posledné odohraté zápasy</td>
+      </tr>
+      <% recent_matches.each do |match| %>
+        <%= render partial: 'matches/table_row', locals: { match: match, color_class: "table-bg-yellow" } %>
+      <% end %>
+    <% end %>
+
+    <% if previous_matches&.any? %>
+      <tr class="text-center border-top-thick">
+        <td colspan="5">Odohraté predtým</td>
+      </tr>
+      <% previous_matches.each do |match| %>
+        <%= render partial: 'matches/table_row', locals: { match: match, color_class: "table-bg-green" } %>
+      <% end %>
+    <% end %>
+
+    <% if unplanned_matches&.any? %>
+      <tr class="text-center border-top-thick">
+        <td colspan="5">Čakajúce na termín</td>
+      </tr>
+      <% unplanned_matches.each do |match| %>
+        <%= render partial: 'matches/table_row', locals: { match: match, color_class: "" } %>
+      <% end %>
+    <% end %>
+    </tbody>
+  </table>
+</div>
+<p class="text-center">
+  <i>
+    <small>
+      <span class="table-bg-green text-nowrap px-2 py-1">odohratý zápas</span>
+      <span class="table-bg-yellow text-nowrap px-2 py-1">odohratý dnes, alebo včera</span>
+      <span class="table-bg-smoke text-nowrap px-2 py-1">naplánovaný zápas</span>
+    </small>
+  </i>
+</p>
