--- a/app/views/players/show.html.erb
+++ b/app/views/players/show.html.erb
@@ -14,8 +14,8 @@
 <div class="text-center">
   <div class="d-inline-block px-3">
     <p class="lead">Posledné zápasy</p>
-    <% if @recent_matches.any? %>
-      <% @recent_matches.each do |match| %>
+    <% if @last_played_matches.any? %>
+      <% @last_played_matches.each do |match| %>
         <%= match_badge(match, @player) %>
       <% end %>
     <% else %>
@@ -117,11 +117,21 @@
       <h3 class="text-center">
         <%= "Zápasy sezóny #{enrollment.season.name}" %>
       </h3>
-      <%= render 'matches/table',
-                 matches: PlayerSeasonMatchesQuery.call(player: @player, season: enrollment.season)
-                     .includes(:round, :winner, player1: :rankings, player2: :rankings),
-                 js_filter_target: "matches-#{enrollment.season.position}",
-                 last_update_time: nil %>
+      <% if @planned_matches.any? || @recent_matches.any? || @previous_matches.any? || @unplanned_matches.any? %>
+        <%= render 'matches/table',
+                   planned_matches: @planned_matches.where(rounds: { season_id: enrollment.season_id }),
+                   recent_matches: @recent_matches.where(rounds: { season_id: enrollment.season_id }),
+                   previous_matches: @previous_matches.where(rounds: { season_id: enrollment.season_id }),
+                   unplanned_matches: @unplanned_matches.where(rounds: { season_id: enrollment.season_id }),
+                   js_filter_target: "matches-#{enrollment.season.position}",
+                   last_update_time: nil %>
+      <% else %>
+        <div class="row">
+          <div class="col">
+            <p class="lead text-center">Žiadne zápasy.</p>
+          </div>
+        </div>
+      <% end %>
     </div>
   </div>
   <div class="row">
