--- a/app/views/shared/_hot_announcement.html.erb
+++ b/app/views/shared/_hot_announcement.html.erb
@@ -1,7 +1,15 @@
-<div class="text-center bg-dark py-2 font-weight-bold">
-  <u>
-    <%= link_to "Skokan roka",
+<!--<div class="text-center bg-dark py-2 font-weight-bold">-->
+<!--  <u>-->
+    <%#= link_to "Skokan roka",
                 pages_season_jumpers_path,
                 class: 'quiet-link' %>
-  </u>
+<!--  </u>-->
+<!--</div>-->
+
+<div class="text-center px-2 attention-background">
+  <small>
+    <b>Sobota 11.9. BalvanCup</b> - turnaj 4-hra v parku. Registrácia u Jara Krajčoviča
+    - <%= link_to "0949 352 652", "tel:0949352652" %>.
+    Štartovné: 15€/osoba.
+  </small>
 </div>
