--- a/app/views/shared/_hot_announcement.html.erb
+++ b/app/views/shared/_hot_announcement.html.erb
@@ -8,8 +8,12 @@
 
 <div class="text-center px-2 attention-background">
   <small>
-    <b>Sobota 11.9. BalvanCup</b> - turnaj 4-hra v parku. Registrácia u Jara Krajčoviča
-    - <%= link_to "0949 352 652", "tel:0949352652" %>.
+    <b>Sobota 11.9. BalvanCup</b> - turnaj <span class="text-nowrap">4-hra</span> v parku.
+    Registrácia u
+    <span class="text-nowrap">
+      Jara Krajčoviča
+      - <%= link_to "0949 352 652", "tel:0949352652" %>.
+    </span>
     Štartovné: 15€/osoba.
   </small>
 </div>
