Changed announcement banner

--- a/app/views/shared/_hot_announcement.html.erb
+++ b/app/views/shared/_hot_announcement.html.erb
@@ -1,19 +1,19 @@
-<!--<div class="text-center bg-dark py-2 font-weight-bold">-->
-<!--  <u>-->
-    <%#= link_to "Skokan roka",
+<div class="text-center bg-dark py-2 font-weight-bold">
+  <u>
+    <%= link_to "Skokan roka",
                 pages_season_jumpers_path,
                 class: 'quiet-link' %>
-<!--  </u>-->
-<!--</div>-->
-
-<div class="text-center px-2 attention-background">
-  <small>
-    <b>Sobota 11.9. BalvanCup</b> - turnaj <span class="text-nowrap">4-hra</span> v parku.
-    Registrácia u
-    <span class="text-nowrap">
-      Jara Krajčoviča
-      - <%= link_to "0949 352 652", "tel:0949352652" %>.
-    </span>
-    Štartovné: 15€/osoba.
-  </small>
+  </u>
 </div>
+
+<!--<div class="text-center px-2 attention-background">-->
+<!--  <small>-->
+<!--    <b>Sobota 11.9. BalvanCup</b> - turnaj <span class="text-nowrap">4-hra</span> v parku.-->
+<!--    Registrácia u-->
+<!--    <span class="text-nowrap">-->
+<!--      Jara Krajčoviča-->
+<!--      - <%#= link_to "0949 352 652", "tel:0949352652" %>.-->
+<!--    </span>-->
+<!--    Štartovné: 15€/osoba.-->
+<!--  </small>-->
+<!--</div>-->
