--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -9,7 +9,7 @@
   <hr>
   <h4 class="text-center pt-5">Princíp súťaže</h4>
   <p class="text-justify">
-    Základná časť majstrovstiev pozostáva z minimálne deviatich hracích kol,
+    Základná časť majstrovstiev pozostáva z cca deviatich hracích kol,
     pričom každé kolo trvá dva týždne.
     Jednotlivé kolá základnej časti súťaže sa žrebujú
     <a href="#swiss-tossing-system">švajčiarskym systémom</a>,
@@ -21,10 +21,6 @@
     Každý hráč odohrá v každom kole jeden zápas, a to v čase, ktorý obom hráčom vyhovuje a na ktorom
     sa sami telefonicky dohodnú. Na odohratie zápasu v kole majú hráči vždy dva týždne, potom začína ďalšie kolo súťaže,
     kde má každý hráč nového súpera.
-  </p>
-  <p class="text-justify">
-    Zápas sa hrá na dva víťazné sety, pri skóre 1:1 na sety je tretí set supertiebreak do 10 (min. rozdiel musí byť 2 body).
-    Ak obaja hráči súhlasia a majú dostatok času, môžu sa dohodnúť, že namiesto supertiebreaku odohrajú štandardný set.
   </p>
   <p class="text-justify">
     Hráč napísaný v zápase ako prvý má právo výberu kurtu, na ktorom sa zápas odohrá, tento kurt zarezervuje a zaplatí.
@@ -93,8 +89,7 @@
 
   <hr>
   <h3 class="text-center py-5">
-    Každý hráč tejto súťaže sa zaväzuje, že bude dodržiavať
-    <%= link_to "Súťažný poriadok", pages_game_rules_path %>
+    <%= link_to "Pravidlá súťaže", pages_game_rules_path %>
   </h3>
 
   <hr>
@@ -105,8 +100,8 @@
   <h4 class="text-center pt-5">Viac info a prihlásenie</h4>
   <p class="text-center">
     Tomáš Radič ● <strong><%= link_to '0905 289 248', 'tel:0905289248' %></strong><br>
-    Ondrej Babala ● <strong><%= link_to_manager_phone %></strong><br>
+<!--    Ondrej Babala ● <strong><%#= link_to_manager_phone %></strong><br>-->
     <%= link_to root_url, root_url %><br>
-    <%= link_to 'matotenis@yahoo.com', 'mailto:matotenis@yahoo.com' %>
+    <%#= link_to 'matotenis@yahoo.com', 'mailto:matotenis@yahoo.com' %>
   </p>
 </div>
