--- a/app/views/pages/game_rules.html.erb
+++ b/app/views/pages/game_rules.html.erb
@@ -1,38 +1,78 @@
 <div class="center-panel">
-  <h1 class="display-5 text-center">Súťažný poriadok</h1>
+  <h1 class="display-5 text-center">Pravidlá súťaže</h1>
 
   <h3 class="text-center pt-5">
-    Táto súťaž sa riadi nasledovnými pravidlami a tie sú zaväzné pre každého hráča na každom zápase
-    v tejto súťaži. Tieto pravidlá zabezpečujú, aby sa zápasy odohrali férovo voči všetkým
-    zúčastneným hráčom.
+    Táto súťaž sa riadi nasledovnými pravidlami a tie sú zaväzné pre každého hráča na každom zápase.
+    Tieto pravidlá zabezpečujú, aby sa zápasy odohrali férovo voči všetkým zúčastneným hráčom.
   </h3>
+
+  <hr>
+  <h4 class="text-center pt-5">Formát zápasu</h4>
+  <ol class="text-justify">
+    <li class="pt-1">
+      Zápas sa hrá na dva víťazné sety. Pri skóre 1:1 na sety je tretí set supertiebreak do 10 (min. rozdiel musí byť 2 body).
+      Ak obaja hráči súhlasia a majú dostatok času, môžu sa dohodnúť, že namiesto supertiebreaku odohrajú štandardný set.
+      Ak jeden z hráčov s klasickým setom nesúhlasí, o zápase rozhodne supertiebreak.
+    </li>
+  </ol>
+
+  <hr>
+  <h4 class="text-center pt-5">Termín odohrania zápasu</h4>
+  <ol class="text-justify">
+    <li class="pt-1">
+      <strong>NEODOHRATÉ ZÁPASY</strong><br>
+      Obaja hráči zodpovedajú za to, aby stihli odohrať a nahlásiť výsledok zápasu v danom kole do okamihu
+      žrebovania ďalšieho kola (žreb - nedeľa 20:00). V prípade, že niektorý z hráčov nemôže odohrať zápas
+      počas daného kola, odohratie zápasu sa môže presunúť do nasledujúceho kola
+      <strong class="text-danger">
+        iba v prípade, že sa hráči dohodli a do okamihu žrebovania nahlásili organizátorovi presný
+        náhradný termín zápasu.
+      </strong>
+      Zápas sa dá presunúť iba do najbližsieho ďalšieho kola. Zápasy, ktoré sú do času žrebovania odignorované
+      (tzn. nenahlásený ani výsledok, ani náhradný termín) budú zmazané a nezapočítané.<br>
+      Ak sa zápas presúva, obaja hráči zápasu sú do ďalšieho kola žrebovaní akoby mali o 3 body viac.
+      <strong class="text-danger">
+        Z tohto dôvodu nebude možné presúvať zápas z predposledného kola do posledného, aby boli
+        do posledného kola všetci žrebovaní podľa svojich reálne nahratých bodov.
+      </strong>
+      Predposledné kolo je nutné odohrať v riadnom termíne, ak niekto nemôže, prehráva kontumačne a bude
+      musieť o body zabojovať v poslednom kole.
+    </li>
+    <li class="pt-1">
+      <strong>NEZHODA NA TERMÍNE ZÁPASU</strong><br>
+      V prípade, že sa hráči nevedia dohodnúť na žiadnom termíne zápasu, postupuje sa tak, že každý z hráčov
+      nahlási organizátorovi jeden až tri také dátumy, kedy nemá problém zápas odohrať. Z takto ponúknutých
+      termínov organizátor vyžrebuje konečný termín pre zápas. Čas zápasu si hráči dohodnú, alebo bude v krajnom prípade
+      stanovený.
+    </li>
+  </ol>
 
   <hr>
   <h4 class="text-center pt-5">Rozhodovanie zápasov</h4>
   <ol class="text-justify">
-    <li>
-      Zápasy si rozhodujú hráči sami, pričom sa riadia
+    <li class="pt-1">
+      Zápasy si štandardne rozhodujú hráči sami, pričom sa riadia
       <a href="https://www.stz.sk/soubory/stp_pravidlatenisu_sj.pdf" target="_blank">
         platnými pravidlami
       </a>
       tenisu.
-      Zápasy sa hrajú na 2 víťazné sety. Tretí, rozhodujúci set sa hrá ako supertiebreak
-      (tiebreak do 10 bodov s rozdielom min. 2 bodov). V prípade, že obaja hráči chcú a majú dostatok
-      času, môžu na rozhodnutie zápasu odohrať klasický set. Ak jeden z hráčov s klasickým
-      setom nesúhlasí, o zápase rozhodne supertiebreak.
     </li>
-    <li>
-      Hlásenie "out" hlási hráč svojmu súperovi len v prípade, že si je istý, že lopta dopadla mimo dvorec.
-      V prípade, že si hráč nie je istý, či bola lopta "out", lopta sa primárne považuje za "in".
-      V takomto "spornom momente" môže hráč dodatočne ohlásiť "out" iba v prípade, že bezodkladne
-      jasne označí odtlačku po dopade tejto lopty.
+    <li class="pt-1">
+      V zápase, ktorý si hráči rozhodujú sami hlási hráč "out" na svojej strane kurtu súperovi vždy iba vtedy,
+      keď si je istý, že lopta dopadla mimo dvorec. Ak si hráč nie je istý, či lopta dopadla na čiaru,
+      alebo mimo dvorec, lopta sa považuje za "in". Hráme na antukových kurtoch a potvrdenie dopadu lopty sa riadi
+      odtlačkou lopty na kurte. Ak ma súper pochybnosť o hlásení "out", musí to riešiť bezodkladne a ísť sa
+      presvedčiť o mieste dopadu lopty, dodatočné reklamácie výroku "out" sa neuznávajú. V prípade, že lopta
+      dopadla na miesto, kde je kurt natoľko vybehaný, že nezanechala po dopade stopu, spoliehame sa v prvom rade
+      na džentlmentstvo oboch hráčov a vzájomne ústretovú dohodu. Ak sa takáto dohoda nedarí, o verdikte rozhodne
+      organizátor.
     </li>
-    <li>
+    <li class="pt-1">
       Hráči sa môžu pred zápasom dohodnúť na rozhodcovi zápasu. Ak obaja hráči (aj nimi zvolený rozhodca)
       súhlasia, rozhodca potom rozhoduje zápas namiesto hráčov, no musí sa držať platných pravidiel
       tenisu spomínaných v bode 1.
     </li>
-    <li>
+    <li class="pt-1">
       Organizátor súťaže má právo rozhodovať ľubovolný zápas. Ak sa tak rozhodne, v takomto prípade
       je zápas rozhodovaný organizátorom.
     </li>
@@ -42,14 +82,14 @@
   <h4 class="text-center pt-5">Správanie sa na dvorci</h4>
   <%= image_tag "bart_fair_play.jpg", alt: "Bart Simpson", class: "center-image" %>
   <ol class="text-justify">
-    <li>
+    <li class="pt-1">
       Hráč má právo počas zápasu požiadať svojho súpera, aby sa "nevyjadroval na jeho adresu
       a na adresu jeho spôsobu hry". Toto pravidlo má predchádzať prípadným provokáciám a slovným
       útokom na dvorci. V prípade, že hráč vznesie túto požiadavku svojmu súperovi je súper povinný
       sa ňou riadiť a zdržať sa akéhokoľvek ďalšieho komentára smerujúceho k hráčovi, alebo jeho
       štýlu hry. Porušenie tohto pravidla môže mať za následok diskvalifikáciu súpera v tomto zápase.
     </li>
-    <li>
+    <li class="pt-1">
       Rozprávanie súpera počas výmeny môže znemožňovať koncentráciu hráča na hru. Ak hráčovi prekáža
       prípadne rozprávanie svojho súpera počas výmeny, má právo ho požiadať, aby mu "nebránil v hre
       rozprávaním". Za "bránenie v hre rozprávaním" sa považujú slová, alebo rušivé výkriky súpera počas toho,
@@ -63,7 +103,7 @@
   <hr>
   <h4 class="text-center pt-5">Meškanie na zápas</h4>
   <ol class="text-justify">
-    <li>
+    <li class="pt-1">
       V prípade ak sa hráči nedohodnú inak a súper prítomného hráča mešká na zápas viac ako 15 minút,
       tento zápas je považovaný za skrečovaný súperom.
     </li>
@@ -72,7 +112,7 @@
   <hr>
   <h4 class="text-center pt-5">Opustenie dvorca</h4>
   <ol class="text-justify">
-    <li>
+    <li class="pt-1">
       Odchádzanie od rozohratého zápasu je primárne na dohode hráčov. No ak sa hráči nevedia dohodnúť,
       opustenie dvorca je každému z hráčov povolené najviac 1x za štandardný set (alebo po jeho
       skončení) na najviac 5 minút, ale nie počas rozohratej hry. V prípade, že hráč opustí dvorec
