--- a/app/views/shared/_hot_announcement.html.erb
+++ b/app/views/shared/_hot_announcement.html.erb
@@ -1,10 +1,10 @@
-<div class="text-center bg-dark py-2 font-weight-bold">
-  <u>
-    <%= link_to "Skokan roka",
+<!--<div class="text-center bg-dark py-2 font-weight-bold">-->
+<!--  <u>-->
+    <%#= link_to "Skokan roka",
                 pages_season_jumpers_path,
                 class: 'quiet-link' %>
-  </u>
-</div>
+<!--  </u>-->
+<!--</div>-->
 
 <!--<div class="text-center px-2 attention-background">-->
 <!--  <small>-->
