--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -22,12 +22,12 @@
             <%= link_to '0905 289 248', 'tel:0905289248' %>
           </small>
         </p>
-        <p class="text-center">
-          <small>
-            Ondrej Babala<br>
-            <%= link_to_manager_phone %>
-          </small>
-        </p>
+<!--        <p class="text-center">-->
+<!--          <small>-->
+<!--            Ondrej Babala<br>-->
+            <%#= link_to_manager_phone %>
+<!--          </small>-->
+<!--        </p>-->
       </div>
     </div>
     <div class="col-xs-12 col-md-6">
