Updated text on pages with rules.

--- a/app/views/pages/game_rules.html.erb
+++ b/app/views/pages/game_rules.html.erb
@@ -29,7 +29,8 @@
         náhradný termín zápasu.
       </strong>
       Zápas sa dá presunúť iba do najbližsieho ďalšieho kola. Zápasy, ktoré sú do času žrebovania odignorované
-      (tzn. nenahlásený ani výsledok, ani náhradný termín) budú zmazané a nezapočítané.<br>
+      (tzn. nenahlásený ani výsledok, ani náhradný termín) budú zmazané a nezapočítané, prípadne uzatvorené
+      v prospech hráča, ktorý mal snahu o odohratie zápasu a komunikoval problém s organizátorom.<br>
       Ak sa zápas presúva, obaja hráči zápasu sú do ďalšieho kola žrebovaní akoby mali o 3 body viac.
       <strong class="text-danger">
         Z tohto dôvodu nebude možné presúvať zápas z predposledného kola do posledného, aby boli
