Added special offer to season 2022.

--- a/app/views/pages/season2022.html.erb
+++ b/app/views/pages/season2022.html.erb
@@ -20,7 +20,7 @@
     a v tejto sezóne sa tenisu v Topoľčanoch zúčastniť pasívnejšie. Na kurtoch v parku ich už nestretnete
     a Ondro túto súťaž už nebude manažovať. Podľa odpovedí hráčov po poslednej sezóne je stále záujem zasúťažiť
     si a preto budú obe ligy - Matotenis aj TOtal pokračovať. Hrať sa bude, tak ako aj doteraz, na ktorýchkoľvek
-    kurtoch v Topoľčanoch (a okolí). Kontakt na organizátora je Tomáš Radič,
+    kurtoch v Topoľčanoch a okolí. Kontakt na organizátora je Tomáš Radič,
     <%= link_to '0905 289 248', 'tel:0905289248' %>,
     <%= link_to 'tomas.radic@gmail.com', 'mailto:tomas.radic@gmail.com' %>.
   </p>
@@ -44,6 +44,50 @@
   <h2 class="text-center pt-5">
     Dôležité zmeny 2022!
   </h2>
+
+  <p class="text-justify">
+    Tento rok je tu špeciálna ponuka na "sezónny lístok", ktorý umožňuje paušálne si predplatiť
+    tenisové kurty na Mravenisku v Topoľčanoch a ďalej už za kurty neplatiť.
+    Takto predplatené kurty je možné využívať na obe ligy - MaTOtenis aj TOtal, ako aj na iné zápasy,
+    alebo tréningy.
+  </p>
+
+  <ol>
+    <li>
+      Sezónny lístok stojí 170€, je vystavený na meno a platný do 10. októbra 2022.
+    </li>
+    <li>
+      Majiteľ lístka potom využíva kurty bezplatne - cez víkendy neobmedzene a cez prac. dni do 17:00.
+    </li>
+    <li>
+      Ak s majiteľom lístka hrá osoba, ktorá takýto lístok nevlastní, táto osoba má 50% zľavu z bežnej ceny za kurt.
+    </li>
+  </ol>
+
+  <p class="mt-2">A bežné ceny sú</p>
+  <ul>
+    <li>
+      Víkend a prac. dni do 17:00
+      <ul>
+        Prvá hodina hry - 7€<br>
+        Po prvej hodine hry, každá ďalšia - 5€<br>
+        <i>(teda napr. 2h vkuse - 12€)</i>
+      </ul>
+    </li>
+  </ul>
+  <ul>
+    <li>
+      Prac. dni po 17:00
+      <ul>
+        Prvá hodina hry - 10€<br>
+        Po prvej hodine hry, každá ďalšia - 8€<br>
+        <i>(teda napr. 2h vkuse - 18€)</i>
+      </ul>
+    </li>
+  </ul>
+
+  <hr>
+
   <p class="text-justify">
     Ako viete, žrebovanie každého ďalšieho kola je pri tomto systéme hry závislé na výsledkoch z predchádzajúceho
     kola. Preto keď nejaká dvojica neodohrá svoj zápas ani za celé dva týždne vznikal vždy problém, ako vyžrebovať a čo
