Removed gemoji gem.

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -9,7 +9,7 @@
   <hr>
   <h4 class="text-center pt-5">Princíp súťaže</h4>
   <p class="text-justify">
-    Základná časť majstrovstiev pozostáva z cca deviatich hracích kol,
+    Základná časť majstrovstiev pozostáva zo sedem, osem, alebo deväť hracích kol,
     pričom každé kolo trvá dva týždne.
     Jednotlivé kolá základnej časti súťaže sa žrebujú
     <a href="#swiss-tossing-system">švajčiarskym systémom</a>,
