Added text on page of rules.

--- a/app/views/pages/season2022.html.erb
+++ b/app/views/pages/season2022.html.erb
@@ -120,7 +120,9 @@
         do posledného kola všetci žrebovaní podľa svojich reálne nahratých bodov.
       </strong>
       Predposledné kolo je nutné odohrať v riadnom termíne, ak niekto nemôže, prehráva kontumačne a bude
-      musieť o body zabojovať v poslednom kole.
+      musieť o body zabojovať v poslednom kole.<br>
+      Hráč, ktorý žiadal presunutie zápasu do ďalšej periódy je zodpovedný za jeho odohratie najneskôr
+      do najbližšieho žrebovania. Ak sa zápas ani v náhradnej perióde neodohrá, je uzatvorený v prospech jeho súpera.
     </li>
     <li class="pt-1">
       <strong>NEZHODA NA TERMÍNE ZÁPASU</strong><br>
