--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -89,7 +89,7 @@
 
   <hr>
   <h3 class="text-center py-5">
-    <%= link_to "Pravidlá súťaže", pages_game_rules_path %>
+    <%= link_to "Pravidlá súťaže", pages_rules_path %>
   </h3>
 
   <hr>
