--- a/app/views/pages/rules.html.erb
+++ b/app/views/pages/rules.html.erb
@@ -23,22 +23,21 @@
       <strong>NEODOHRATÉ ZÁPASY</strong><br>
       Obaja hráči zodpovedajú za to, aby stihli odohrať a nahlásiť výsledok zápasu v danom kole do okamihu
       žrebovania ďalšieho kola (žreb - nedeľa 20:00). V prípade, že niektorý z hráčov nemôže odohrať zápas
-      počas daného kola, odohratie zápasu sa môže presunúť do nasledujúceho kola
+      počas daného kola, odohratie zápasu sa môže odložiť do nasledujúceho kola
       <strong class="text-danger">
-        iba v prípade, že sa hráči dohodli a do okamihu žrebovania nahlásili organizátorovi presný
-        náhradný termín zápasu.
+        ale odklad zápasu je nutné organizátorovi NAHLÁSIŤ! Neodohraté a nenahlásené zápasy sa NEODKLADAJÚ AUTOMATICKY.
       </strong>
-      Zápas sa dá presunúť iba do najbližsieho ďalšieho kola. Zápasy, ktoré sú do času žrebovania odignorované
-      (tzn. nenahlásený ani výsledok, ani náhradný termín) budú zmazané a nezapočítané, prípadne uzatvorené
+      Zápas sa dá odložiť iba do najbližsieho ďalšieho kola. Zápasy, ktoré sú do času žrebovania odignorované
+      (tzn. nenahlásený ani výsledok, ani požiadavka na odklad) budú zmazané a nezapočítané, prípadne uzatvorené
       v prospech hráča, ktorý mal snahu o odohratie zápasu a komunikoval problém s organizátorom.<br>
-      Ak sa zápas presúva, obaja hráči zápasu sú do ďalšieho kola žrebovaní akoby mali o 3 body viac.
+      Ak sa zápas odkladá, obaja hráči zápasu sú do ďalšieho kola žrebovaní akoby mali o 3 body viac.
       <strong class="text-danger">
-        Z tohto dôvodu nebude možné presúvať zápas z predposledného kola do posledného, aby boli
+        Z tohto dôvodu nebude možné odkladať zápas z predposledného kola do posledného, aby boli
         do posledného kola všetci žrebovaní podľa svojich reálne nahratých bodov.
       </strong>
       Predposledné kolo je nutné odohrať v riadnom termíne, ak niekto nemôže, prehráva kontumačne a bude
       musieť o body zabojovať v poslednom kole.<br>
-      Hráč, ktorý žiadal presunutie zápasu do ďalšej periódy je zodpovedný za jeho odohratie najneskôr
+      Hráč, ktorý žiadal odklad zápasu do ďalšej periódy je zodpovedný za jeho odohratie najneskôr
       do najbližšieho žrebovania. Ak sa zápas ani v náhradnej perióde neodohrá, je uzatvorený v prospech jeho súpera.
     </li>
     <li class="pt-1">
