--- a/app/views/pages/season2021.html.erb
+++ b/app/views/pages/season2021.html.erb
@@ -69,7 +69,7 @@
     <li class="pt-1">
       <strong>SÚŤAŽNÝ PORIADOK</strong><br>
       Pravidlá platné pre zápasy tejto súťaže popisuje
-      <%= link_to "súťažný poriadok", pages_game_rules_path, target: :_blank %>, ktorý je záväzný
+      <%= link_to "súťažný poriadok", pages_rules_path, target: :_blank %>, ktorý je záväzný
       pre každého hráča v každom zápase.
     </li>
   </ol>
