--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -55,7 +55,7 @@
   <div class="row">
     <div class="col">
       <p class="text-center font-weight-light">
-        <small><u><%= link_to "Súťažný poriadok", pages_game_rules_path %></u></small>
+        <small><u><%= link_to "Súťažný poriadok", pages_rules_path %></u></small>
       </p>
     </div>
   </div>
