--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -35,7 +35,7 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <%= link_to 'Princíp', pages_about_path, class: 'dropdown-item' %>
-            <%= link_to 'Pravidlá', pages_game_rules_path, class: 'dropdown-item' %>
+            <%= link_to 'Pravidlá', pages_rules_path, class: 'dropdown-item' %>
           </div>
         </li>
       </ul>
